Fix group layer transformation preview showing wrong frame.

BUG:413968