libs/image/kis_image_animation_interface.h
@@ -171,6 +171,7 @@ private:
     void blockFrameInvalidation(bool value);
 
     friend class KisSwitchTimeStrokeStrategy;
+    friend class TransformStrokeStrategy;
     void explicitlySetCurrentTime(int frameId);
 
 Q_SIGNALS:
