plugins/tools/tool_transform2/kis_tool_transform.cc
@@ -211,7 +211,6 @@ void KisToolTransform::paint(QPainter& gc, const KoViewConverter &converter)
         m_refRect = newRefRect;
         currentStrategy()->externalConfigChanged();
     }
-
     currentStrategy()->paint(gc);
 
 
